# agentic.city

./: CONTRIBUTING.md  README.md  default.nix  flake.nix  shell.nix
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: deploy.yml
gitwise/: Cargo.toml  README.md
gitwise/src/: main.rs  utils.rs
gitwise/src/ai/: mod.rs
gitwise/src/git/: history.rs  mod.rs  staging.rs
scripts/: ollama-wrapper  requests.py
swarmer/: .gitignore  .pre-commit-config.yaml  mypy.ini  pyproject.toml
swarmer/.github/workflows/: ci.yml
swarmer/docs/: conf.py  index.rst  installation.rst  quickstart.rst
swarmer/examples/: basic.py
swarmer/swarmer/: __init__.py  agent.py  swarmer_types.py  utils.py
swarmer/swarmer/contexts/: __init__.py  debug_context.py  memory_context.py  persona_context.py  time_context.py  tool_creation_context.py
swarmer/swarmer/contexts/crypto_context/: __init__.py  crypto_context.py
swarmer/swarmer/contexts/search_context/: __init__.py  search_context.py
swarmer/swarmer/debug_ui/: context_ui.py  server.py
swarmer/swarmer/globals/: agent_registry.py  consitution.py
swarmer/swarmer/instructions/: instruction.py
swarmer/swarmer/tools/: create_agent.py  dependencies.py  google_search.py  types.py  utils.py  web_reader.py
swarmer/tests/: __init__.py  conftest.py  test_agent.py
swarmer/tests/contexts/: test_base_context.py
swarmer/tests/tools/: test_utils.py
telegram-bot/: .env.example  .gitignore  .pre-commit-config.yaml  README.md  mypy.ini  pyproject.toml
telegram-bot/deployment/: telegram-bot.service
telegram-bot/scripts/: backup.sh  deploy.sh  run_local.sh
telegram-bot/swarmer/: README.md  agent.py  types.py
telegram-bot/swarmer/contexts/: README.md  instruction_context.py  memory_context.py  persona_context.py  time_context.py  tool_creation_context.py
telegram-bot/swarmer/contexts/crypto_context/: crypto_context.py
telegram-bot/swarmer/contexts/search_context/: __init__.py  search_context.py
telegram-bot/swarmer/debug_ui/: context_ui.py  server.py
telegram-bot/swarmer/docs/: message_flow.md  serialization.md  tools.md
telegram-bot/swarmer/examples/: basic.py
telegram-bot/swarmer/globals/: agent_registry.py  consitution.py
telegram-bot/swarmer/instructions/: instruction.py
telegram-bot/swarmer/tools/: create_agent.py  google_search.py  types.py  utils.py
telegram-bot/telegram_bot/: main.py
telegram-bot/telegram_bot/agents/: agent_manager.py  basic.py
telegram-bot/telegram_bot/bot_interface/: config.py  logging_config.py  main.py
telegram-bot/telegram_bot/bot_interface/commands/: dump.py  health.py  help.py  info.py  inspect.py  remove_agent.py  start.py  status.py  tools.py  usage.py
telegram-bot/telegram_bot/bot_interface/handlers/: error_handler.py  message_handler.py
telegram-bot/telegram_bot/bot_interface/utils/: admin_notify.py
telegram-bot/tests/: conftest.py  test_error_handler.py  test_message_handler.py  test_status_command.py
trantor/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  langgraph.json  pyproject.toml  setup.py  smoke.py  test.json
trantor/agents/: __init__.py  config.py  main.py
