[package]
name = "gitwise"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "An intelligent Git history exploration and manipulation tool powered by AI"
license = "MIT"

[dependencies]
# CLI and TUI
clap = { version = "4.4", features = ["derive"] }
ratatui = "0.24"
crossterm = "0.27"

# Git integration
git2 = "0.18"

# Async runtime
tokio = { version = "1.34", features = ["full"] }

# Error handling and utilities
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# AI integration
async-openai = "0.17.1"
dotenv = "0.15.0"

# Date formatting
chrono = "0.4"

[dev-dependencies]
pretty_assertions = "1.4"
tokio-test = "0.4"
