[tool.poetry]
name = "swarmer"
version = "0.1.0"
description = "A package for managing AI agents"
authors = ["Jorik Schellekens <joriksch@gmail.com>"]
readme = "README.md"
packages = [
    { include = "swarmer", from = "." }
]

[tool.poetry.dependencies]
python = "^3.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
