[tool.poetry]
name = "swarmer"
version = "0.1.0"
description = "A package for managing AI agents"
authors = ["Jorik Schellekens <joriksch@gmail.com>"]
readme = "README.md"
packages = [
    { include = "swarmer", from = "." }
]
include = ["py.typed"]

[tool.poetry.dependencies]
python = "^3.9"
litellm = "^1.52.3"
flask = "^3.0.3"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.3"
eth-account = "^0.13.4"
eth-typing = "^5.0.1"
web3 = "^7.5.0"
werkzeug = "^3.0.1"
nicegui = "^1.4.6"

[tool.poetry.dev-dependencies]
mypy = "^1.8.0"
types-requests = "^2.31.0.20240125"
types-beautifulsoup4 = "^4.12.0.20241020"
pytest = "^8.0.0"
pytest-cov = "^4.1.0"
black = "^24.1.1"
isort = "^5.13.2"
flake8 = "^7.0.0"
sphinx = "^7.2.6"
sphinx-rtd-theme = "^2.0.0"
pre-commit = "^3.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88
