[tool.poetry]
name = "telegram-bot"
version = "0.1.0"
description = ""
authors = ["Jorik Schellekens <joriksch@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
atomic-agents = "^1.0.9"
openai = "^1.54.3"
groq = "^0.11.0"
python-telegram-bot = "^21.7"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
