[tool.poetry]
name = "telegram-bot"
version = "0.1.0"
description = ""
authors = ["Jorik Schellekens <joriksch@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-telegram-bot = "^20.0"
python-dotenv = "^0.19.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0"
pytest-asyncio = "^0.18.0"
pytest-cov = "^3.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = "test_*.py"
markers = [
    "asyncio: mark test as async",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
